[gd_scene load_steps=19 format=3 uid="uid://b71c6sh4m0f5e"]

[ext_resource type="Script" path="res://scripts/katamari_controllable.gd" id="1_k6077"]
[ext_resource type="Curve" uid="uid://cqv88nsvwy1k" path="res://misc/katamari_physics_curve.tres" id="2_dth00"]
[ext_resource type="Shader" path="res://misc/CameraShader.gdshader" id="4_0tvtr"]
[ext_resource type="AudioStream" uid="uid://wmfgl0sojypp" path="res://sounds/game/scale_up.mp3" id="5_2kyss"]
[ext_resource type="ArrayMesh" uid="uid://b3d1u1ws4oeus" path="res://models/core/core_generic.obj" id="5_mqsmu"]
[ext_resource type="Texture2D" uid="uid://dh11xmfpvorbh" path="res://textures/core/core_test.png" id="6_s083g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wcqj7"]
render_priority = 0
shader = ExtResource("4_0tvtr")
shader_parameter/zoom_amount = 0.0

[sub_resource type="QuadMesh" id="QuadMesh_boo8u"]
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="Animation" id="Animation_vc1w8"]
resource_name = "CameraZoom"
length = 2.89
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KatamariCamShaderTarget:material_override:shader_parameter/zoom_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.065, 0.0]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../KatamariAudio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_2kyss")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_dopje"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KatamariCamShaderTarget:material_override:shader_parameter/zoom_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hdva6"]
_data = {
"CameraZoom": SubResource("Animation_vc1w8"),
"RESET": SubResource("Animation_dopje")
}

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_tecj2"]
friction = 0.08
rough = true
bounce = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h62m0"]
albedo_texture = ExtResource("6_s083g")
texture_filter = 2
grow_amount = 0.881

[sub_resource type="SphereShape3D" id="SphereShape3D_5e5bl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmoml"]
bg_color = Color(0.12549, 0.160784, 0.258824, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2q56b"]
bg_color = Color(0.458824, 0.458824, 0.458824, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.611765, 0.611765, 0.611765, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_8467r"]
font_size = 32

[sub_resource type="GDScript" id="GDScript_4llql"]
resource_name = "ZoomAnimButton"
script/source = "extends Button

func _pressed():
	$\"../../KatamariCameraPivot/KatamariCamera/KatamariCameraZoom\".play(\"CameraZoom\")
"

[node name="KatamariControllable" type="Node3D"]
editor_description = "An inherited scene for a player-controlled katamari. Only one should exist per-viewport; any more can cause issues with multiple active cameras."
script = ExtResource("1_k6077")
InclineSpeedMultiplier = ExtResource("2_dth00")

[node name="KatamariCameraPivot" type="Node3D" parent="."]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="KatamariCamera" type="Camera3D" parent="KatamariCameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
current = true

[node name="KatamariCamShaderTarget" type="MeshInstance3D" parent="KatamariCameraPivot/KatamariCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
material_override = SubResource("ShaderMaterial_wcqj7")
cast_shadow = 0
extra_cull_margin = 16384.0
gi_mode = 0
mesh = SubResource("QuadMesh_boo8u")

[node name="KatamariCameraZoom" type="AnimationPlayer" parent="KatamariCameraPivot/KatamariCamera"]
libraries = {
"": SubResource("AnimationLibrary_hdva6")
}

[node name="KatamariBody" type="RigidBody3D" parent="."]
process_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
physics_material_override = SubResource("PhysicsMaterial_tecj2")
center_of_mass_mode = 1
can_sleep = false
linear_damp_mode = 1
linear_damp = 1.1

[node name="KatamariMeshPivot" type="Node3D" parent="KatamariBody"]

[node name="KatamariMesh" type="MeshInstance3D" parent="KatamariBody/KatamariMeshPivot"]
transform = Transform3D(1.125, 0, 0, 0, 1.125, 0, 0, 0, 1.125, 0, 0, 0)
mesh = ExtResource("5_mqsmu")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_h62m0")

[node name="KatamariBaseCollision" type="CollisionShape3D" parent="KatamariBody"]
shape = SubResource("SphereShape3D_5e5bl")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.98
anchor_right = 0.5
anchor_bottom = 0.98
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0

[node name="PanelL" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 100.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_qmoml")

[node name="StickL" type="Panel" parent="Control/PanelL"]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2q56b")

[node name="PanelR" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_qmoml")

[node name="StickR" type="Panel" parent="Control/PanelR"]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2q56b")

[node name="Line2D" type="Line2D" parent="Control"]
points = PackedVector2Array(50, 50, 150, 50)
width = 5.0

[node name="StickM" type="Panel" parent="Control"]
z_index = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 4.99999
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2q56b")

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_top = -22.0
offset_right = -40.0
grow_horizontal = 2
rotation = 1.5708
pivot_offset = Vector2(40, 22)
text = "<="
label_settings = SubResource("LabelSettings_8467r")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 224.0
offset_top = 28.6
offset_right = 499.0
offset_bottom = 73.6
pivot_offset = Vector2(40, 22)
text = "a: XXrad (XXdeg)"
label_settings = SubResource("LabelSettings_8467r")
vertical_alignment = 1

[node name="Label3" type="Label" parent="Control"]
layout_mode = 0
offset_left = -848.0
offset_top = -226.4
offset_right = -573.0
offset_bottom = 106.6
pivot_offset = Vector2(40, 22)
text = "x:
y:
z:
Vx: 
Vy: 
Vz:
Vr:"
label_settings = SubResource("LabelSettings_8467r")
vertical_alignment = 1

[node name="Label4" type="Label" parent="Control"]
layout_mode = 0
offset_left = -851.0
offset_top = -945.4
offset_right = -576.0
offset_bottom = -852.4
pivot_offset = Vector2(40, 22)
text = "size: 
damp:"
label_settings = SubResource("LabelSettings_8467r")
vertical_alignment = 1

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = -159.0
offset_top = 64.6
offset_right = -25.0
offset_bottom = 95.6
text = "Play Zoom Anim"
script = SubResource("GDScript_4llql")

[node name="KatamariAudio" type="AudioStreamPlayer" parent="."]
